--- a/vertx-maven-service-factory-examples-it/pom.xml
+++ b/vertx-maven-service-factory-examples-it/pom.xml
@@ -15,7 +15,7 @@
   <properties>
     <example.dir>maven-service-factory-examples</example.dir>
     <fastbuild>false</fastbuild>
-    <jar.version>${project.version}</jar.version>
+    <jar.version>3.3.0.CR1</jar.version>
   </properties>
 
   <build>
@@ -59,7 +59,7 @@
               <additionalProperties>
                 <base>${project.build.directory}/it/${example.dir}</base>
                 <dependencies>${project.build.directory}/dependencies</dependencies>
-                <version>${project.version}</version>
+                <version>${jar.version}</version>
               </additionalProperties>
             </configuration>
           </execution>
