--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
   <packaging>pom</packaging>
 
   <properties>
-    <vertx.version>3.3.0.CR1</vertx.version>
-    <vertx.examples.branch>3.3.0.CR1</vertx.examples.branch>
+    <vertx.version>3.3.0</vertx.version>
+    <vertx.examples.branch>3.3.0-staging</vertx.examples.branch>
   </properties>
 
   <modules>
