--- a/vertx-maven-examples-it/pom.xml
+++ b/vertx-maven-examples-it/pom.xml
@@ -14,7 +14,7 @@
 
     <properties>
         <fastbuild>false</fastbuild>
-        <jar.version>3.3.0.CR1</jar.version>
+        <jar.version>3.3.0</jar.version>
     </properties>
 
     <build>
