--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,7 @@
       <id>oss.snapshots</id>
       <url>https://oss.sonatype.org/content/repositories/snapshots</url>
       <snapshots>
-        <enabled>false</enabled>
+        <enabled>true</enabled>
       </snapshots>
       <releases>
         <enabled>true</enabled>
