--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <module>vertx-spring-examples-it</module>
         <module>vertx-resteasy-examples-it</module>
         <module>vertx-web-client-examples-it</module>
+        <module>vertx-circuit-breaker-examples-it</module>
       </modules>
     </profile>
 
